# mackerel-agent-rs

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  Vagrantfile  cli.yml  docker-compose.yml  mackerel-agent.conf.sample
.github/workflows/: ci.yaml
deployments/development/: Dockerfile  entrypoint.sh
deployments/development/src-entrypoints/: precopy_appsync.sh
deployments/development/supervisor.conf.d/: supervisor.daemon.conf
src/: client.rs  config.rs  cpu.rs  disk.rs  filesystem.rs  interface.rs  lib.rs  loadavg.rs  main.rs  memory.rs  util.rs
src/host_meta/: mod.rs  version.rs
src/metric/: cpu.rs  disk.rs  filesystem.rs  interface.rs  loadavg.rs  memory.rs  mod.rs
src/metrics/: mod.rs
