[package]
name = "mackerel-agent-rs"
version = "0.1.0"
authors = ["Krout0n <krouton@hatena.ne.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2", features = ["yaml"]}
compile-time-run = "0.2.11"
hostname = "^0.3"
lazy_static = "1.4.0"
mackerel_client = { git = "https://github.com/Krout0n/mackerel-client-rs" }
os-stat-rs = { git = "https://github.com/Krout0n/os-stat-rs" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
