[package]
name = "mackerel_agent"
version = "0.1.0"
authors = ["Krout0n <krouton@hatena.ne.jp>", "dekokun <dekokun@hatena.ne.jp>", "ne-sachirou <ne-sachirou@hatena.ne.jp>"]
edition = "2018"

[dependencies]
async-trait = "0.1.41"
clap = "3.0.0-beta.2"
compile-time-run = "0.2.11"
hostname = "^0.3"
lazy_static = "1.4.0"
mackerel_client = { git = "https://github.com/Krout0n/mackerel-client-rs" }
os_stat = "0.1.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[dev-dependencies]
mockall = "0.8.0"
